[package]
authors = ["nathanfaucett@gmail.com"]
description = "simple peer to peer over webrtc"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "peer"
repository = "https://github.com/aicacia/rs-peer"
rust-version = "1.82"
version = "0.1.0"

[lib]
name = "peer"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
webrtc = { version = "0.12", default-features = false }
uuid = { version = "1.11", default-features = false }
tokio = { version = "*", default-features = false }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
