[package]
authors = ["nathanfaucett@gmail.com"]
description = "simple peer to peer over webrtc"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "webrtc-p2p"
repository = "https://github.com/aicacia/rs-peer"
rust-version = "1.56"
version = "0.1.0"

[lib]
name = "webrtc_p2p"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
webrtc = { version = "0", default-features = false }
uuid = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }
atomicoption = "0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
